Deploy secure staging topology
